Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.2.2
-
Fix Version/s: 10.3.4
-
Component/s: Storage Engine - InnoDB
-
Labels:
Description
The MySQL 5.7 implementation of the parameter adaptive_hash_index_parts introduced a large number of calls to the function btr_get_search_latch(). The adaptive hash index bucket of a particular B-tree index is constant; therefore we should avoid recomputing the hash bucket, especially when calling btr_search_x_lock(index) and btr_search_x_unlock(index) in the same function.
It is better to cache the result of btr_get_search_latch() in a local variable and to pass that as parameter to certain functions.
Attachments
Issue Links
- relates to
-
MDEV-14441 InnoDB hangs when setting innodb_adaptive_hash_index=OFF during UPDATE
-
- Closed
-